<resources>
    <string name="app_name">呦呦出行</string>
    <string name="car_type_name">呦呦出行分时</string>
    <string name="car_short_name">呦呦出行短租</string>
    <string name="search_net_loaction">搜索网点</string>
    <string name="list">列表</string>
    <string name="select_car_type">筛选车型</string>
    <string name="login_password">密码</string>
    <string name="mobile">手机号</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="code_phone">验证码</string>
    <string name="code_give">获取验证码</string>
    <string name="account_balance">账户余额</string>
    <string name="sum_order">累计订单</string>
    <string name="sum_rent">累计租金</string>
    <string name="charge">充值</string>
    <string name="security_deposit">押金</string>
    <string name="coupon">优惠券</string>
    <string name="costs_instruction">费用说明</string>
    <string name="sweep_code_use_car">扫码约车</string>
    <string name="update_password">修改密码</string>
    <string name="suer_feedback">用户反馈</string>
    <string name="user_about">关于我们</string>
    <string name="pay_way">支付方式</string>
    <string name="balance_money">余额￥</string>
    <string name="input_money">请输入金额</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_password">确认密码</string>
    <string name="input_feedback">请输入您的建议</string>
    <string name="exchange">兑换</string>
    <string name="input_exchange_code">请输入兑换码</string>
    <string name="select_car">选车</string>
    <string name="input_take_car">请选择取车网点</string>
    <string name="input_refund_car">请选择还车网点</string>
    <string name="take_car_dot">取车点</string>
    <string name="refund_car_dot">还车点</string>
    <string name="please_select">请选择</string>
    <string name="take_car_time">取车时间</string>
    <string name="refund_car_time">还车时间</string>
    <string name="app_name_short_rent">呦呦出行分时</string>
    <string name="app_name_time_sharing">呦呦出行短租</string>
    <string name="rationale_camera"> This app needs access to your camera so you can take pictures. </string>
    <string name="rationale_storage"> This app needs access to your storage so you can storage. </string>
    <string name="rationale_call">This app needs access to your phone so you can call></string>
    <string name="rationale_location"> This app needs access to your location so you can location.</string>
    <string name="scan_tips">\"将二维码图片对准扫描框即可自动扫描\"</string>
    <string name="copysuccess">复制成功</string>
    <string name="copyfail">复制地址出错</string>
    <string name="indentify_certification">身份认证</string>
    <string name="enquiries_applay_progress">申请进度查询</string>
    <string name="real_name">真实姓名</string>
    <string name="driver_license_number">驾照号</string>
    <string name="where_area">所在区域</string>
    <string name="detail_address">详细地址</string>
    <string name="contact_service">联系客服</string>
    <string name="car_number">车牌</string>
    <string name="order_record">订单记录</string>
    <string name="identify_positive">点击上传身份证正面</string>
    <string name="identify_reverse">点击上传身份证反面</string>
    <string name="take_photo">拍摄</string>
    <string name="submit">提交</string>
    <string name="splash_version"><![CDATA[<string name=\"splash_version\">V %1$s</string>]]></string>
    <string name="check_near_pot">查找附近网点</string>
    <string name="next_step">下一步</string>
    <string name="license_plate">车牌</string>
    <string name="car_identification">车辆识别代码</string>
    <string name="car_engine_number">发动机号码</string>
    <string name="set_pass">设置密码</string>
    <string name="sure_pass">确认密码</string>
    <string name="register">register</string>
    <string name="rent_free">租车费用</string>
    <string name="location">位置</string>
    <string name="cost">费用</string>
    <string name="sure_ckeck">确定预约</string>
    <string name="select_navigtion">选择地图</string>
    <string name="ok">ok</string>
    <string name="open_car_door">开车门</string>
    <string name="close_car_door">关车门</string>
    <string name="take_off_lock">降地锁</string>
    <string name="refund_car">还车</string>
    <string name="grab_single">抢单</string>
    <string name="business_name">物业公司名称</string>
    <string name="contact_address">联系地址</string>
    <string name="certify">认证</string>
    <string name="subscribe_amount">认购数量</string>
    <string name="send_car_home">送车上门</string>
    <string name="take_car_home">上门取车</string>
    <string name="please_select_address">请选择地址</string>
    <string name="take_car_address">取车地址</string>
    <string name="send_car_address">送车地址</string>
    <string name="take_order">下单</string>
    <string name="app_name_send_car">呦呦专车接送</string>
    <string name="navigtion">导航</string>


    <string-array name="hflow1">
        <item>预约</item>
        <item>取车</item>
        <item>用车</item>
        <item>支付</item>
        <item>完成</item>
    </string-array>

    <string-array name="hflow2">
        <item>取车</item>
        <item>用车</item>
        <item>支付</item>
        <item>完成</item>
    </string-array>
</resources>
