<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
 <LinearLayout
     android:layout_width="200dp"
     android:orientation="vertical"
     android:layout_centerHorizontal="true"
     android:gravity="center"
     android:layout_marginTop="@dimen/activity_horizontal_margin"
     android:background="@drawable/icon_head_select_shape"
     android:layout_height="140dp">
     <TextView
         android:id="@+id/tv_time_sharing"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
         android:text="@string/app_name_short_rent"
         android:layout_marginTop="@dimen/spacing_tinyer"
         android:textColor="@color/black"
         android:textSize="@dimen/font_smaller" />
     <TextView
         android:id="@+id/tv_short_rent"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="@string/app_name_time_sharing"
         android:textColor="@color/black"
         android:gravity="center"
         android:textSize="@dimen/font_smaller" />
     <TextView
         android:id="@+id/tv_send_car"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="@string/app_name_send_car"
         android:textColor="@color/black"
         android:gravity="center"
         android:textSize="@dimen/font_smaller" />
 </LinearLayout>
</RelativeLayout>