<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/backgroudcolor"
    android:layout_height="match_parent">
<include
    layout="@layout/widget_navigation_title"></include>

 <RelativeLayout
     android:layout_width="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:layout_height="50dp">
     <CheckBox
         android:id="@+id/cb_send_car_home"
         android:layout_width="20dp"
         android:button="@null"
         android:checked="true"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:background="@drawable/bg_radio_selecter"
         android:layout_height="20dp" />
     <TextView
         android:layout_width="wrap_content"
         android:textSize="@dimen/font_small"
         android:textColor="@color/colorHint"
         android:text="@string/send_car_home"
         android:layout_toRightOf="@+id/cb_send_car_home"
         android:layout_marginLeft="@dimen/spacing_tinyer"
         android:layout_centerVertical="true"
         android:layout_height="wrap_content" />
     <CheckBox
         android:id="@+id/cb_take_car_home"
         android:layout_width="20dp"
         android:button="@null"
         android:checked="true"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/bg_radio_selecter"
         android:layout_height="20dp" />
     <TextView
         android:layout_width="wrap_content"
         android:textSize="@dimen/font_small"
         android:textColor="@color/colorHint"
         android:text="@string/take_car_home"
         android:layout_toLeftOf="@+id/cb_take_car_home"
         android:layout_marginRight="@dimen/spacing_tinyer"
         android:layout_centerVertical="true"
         android:layout_height="wrap_content" />
 </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:layout_height="80dp">
        <TextView
            android:id="@+id/tv_send_car_home_desc"
            android:layout_width="wrap_content"
            android:textSize="@dimen/font_small"
            android:textColor="@color/colorOrangePrimary"
            android:text="@string/send_car_address"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_send_car_home_address"
            android:layout_width="wrap_content"
            android:textSize="@dimen/font_smaller"
            android:textColor="@color/colorHint"
            android:text="@string/please_select_address"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_take_car_home_desc"
            android:layout_width="wrap_content"
            android:textSize="@dimen/font_small"
            android:textColor="@color/colorOrangePrimary"
            android:text="@string/take_car_address"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_take_car_home_address"
            android:layout_width="wrap_content"
            android:textSize="@dimen/font_smaller"
            android:textColor="@color/colorHint"
            android:text="@string/please_select_address"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_mimimumer"
        android:layout_height="120dp">
        <LinearLayout
            android:id="@+id/rl_take_car_time"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_car_time"
                android:textColor="@color/black"
                android:textSize="@dimen/font_small" />
            <TextView
                android:id="@+id/tv_take_car_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/please_select"
                android:textColorHint="@color/colorHint"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/font_smaller" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="150dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="总时长"
                android:textColor="@color/colorHint"
                android:textSize="@dimen/font_small" />
            <View
                android:layout_width="match_parent"
                android:background="@color/backgroudcolor"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_height="1dp"></View>

            <TextView
                android:id="@+id/tv_sum_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2:00:00"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/font_smaller" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/rl_refund_car_time"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refund_car_time"
                android:textColor="@color/black"
                android:textSize="@dimen/font_small" />
            <TextView
                android:id="@+id/tv_refund_car_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/please_select"
                android:textColorHint="@color/colorHint"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/black"
                android:textSize="@dimen/font_smaller" />
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_rob_order"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/button_height_short"
        android:background="@drawable/bg_selector_button"
        android:gravity="center"
        android:text="@string/take_order"
        android:textColor="@color/white"
        android:textSize="@dimen/font_smaller" />
</LinearLayout>