<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/backgroudcolor"
    android:layout_height="match_parent">

 <include
     layout="@layout/widget_navigation_title"></include>

 <RelativeLayout
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_marginTop="@dimen/activity_horizontal_margin"
     android:layout_height="180dp">
     <LinearLayout
         android:layout_width="wrap_content"
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/button_height_short"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:text="@string/balance_money"
             android:gravity="center|left"
             android:textSize="@dimen/font_smaller"
             android:textColor="@color/black"
             android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tv_account_blance"
         android:layout_width="wrap_content"
         android:text="450"
         android:gravity="center|left"
         android:textSize="32sp"
         android:textColor="@color/colorOrangePrimary"
         android:layout_height="wrap_content" />
</LinearLayout>
   <EditText
       android:layout_width="match_parent"
       android:layout_alignParentBottom="true"
       android:layout_marginLeft="@dimen/button_height_short"
       android:layout_marginRight="@dimen/button_height_short"
       android:layout_marginBottom="@dimen/button_height_short"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:hint="@string/input_money"
       android:textColor="@color/black"
       android:textSize="@dimen/font_smaller"
       android:inputType="numberDecimal"
       android:textColorHint="@color/black"
       android:background="@drawable/bg_edit_money_shape"
       android:layout_height="40dp" />
 </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/pay_way"
        android:gravity="center|left"
        android:paddingLeft="@dimen/button_height_short"
        android:textSize="@dimen/font_smaller"
        android:textColor="@color/black"
        android:layout_height="45dp" />

    <ListView
        android:id="@+id/lv_pay_type"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        android:dividerHeight="@dimen/spacing_mimimum"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:divider="@color/backgroudcolor"
        android:layout_height="101dp"></ListView>
    <Button
        android:id="@+id/btn_sure_charge"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/button_height_normal"
        android:background="@drawable/bg_selector_button"
        android:gravity="center"
        android:text="@string/charge"
        android:textColor="@color/white"
        android:textSize="@dimen/font_smaller" />
</LinearLayout>